# autonomous-physical-therapy-device

./: -physical-therapy-device  CMakeLists.txt  GITHUB_SYNC_STATUS.md  README.md
.github/workflows/: ci-cd.yml  data-pipeline.yml  medical-compliance.yml
cmake/: TherapyDeviceConfig.cmake.in
config/: config.h.in  supabase_config.json
docs/: README.md
docs/api/: api_specification.md  cpp_core_api.md
docs/compliance/: iec62304_compliance.md
docs/database/: README.md
docs/design/: system_architecture.md
docs/development/: DEVELOPMENT_GUIDE.md
docs/memory/: compliance_requirements.json  data_pipeline_memory.json  hardware_specifications.json  memory_index.json  performance_requirements.json  sprint_memory.json  technical_decisions.json
docs/planning/: sprint1_plan.md  sprint1_technical_implementation.md
docs/requirements/: functional_requirements.md
docs/sprint/: mediapipe_integration_report.md  sprint2_plan.md  sprint3_completion_report.md
docs/user/: CLINICAL_USER_GUIDE.md  USER_MANUAL.md
include/core/: application.h  config_manager.h  error_handler.h  logger.h
include/hardware/: camera_factory.h  d435_camera.h  femto_mega_camera.h  icamera.h
scripts/: supabase_setup.py  test_supabase_setup.py
src/cpp/: CMakeLists.txt  main.cpp
src/cpp/core/: CMakeLists.txt
src/cpp/hardware/: CMakeLists.txt  camera_factory.cpp
tests/: CMakeLists.txt  main_test.cpp  test_config.h.in
tests/common/: CMakeLists.txt  mock_camera.h  test_utils.h
tests/reports/: .gitkeep
tests/unit/: CMakeLists.txt  test_camera_interface.cpp
